corrected menu for mobile and added links

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    overflow-x: hidden;
+}
 
 body {
     /* Uses San Francisco (Mac), Segoe UI (Windows), Roboto (Android) automatically */
@@ -284,18 +287,25 @@ p {
         width: 100%;
         height: calc(100vh - var(--header-height));
         background-color: var(--bg-color);
+
+        display: flex;
         flex-direction: column;
         justify-content: flex-start;
         padding-top: 2rem;
-        transform: translateX(100%);
-        /* Hidden by default */
-        transition: transform 0.3s ease-in-out;
+
+        /* Proper hidden state */
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+
+        transition: opacity 0.3s ease, visibility 0.3s ease;
         border-top: 1px solid var(--border-color);
     }
 
     .nav-links.active {
-        transform: translateX(0);
-        /* Slide in */
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
     }
 
     .nav-links li {
